--- a/sketch.html
+++ b/sketch.html
@@ -19,9 +19,14 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
     <style>
+        html {
+            height: 100%;
+        }
+
         body {
             font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
             font-size: 62.5%;
+            height: 100%;
         }
 
         #dialog {
@@ -117,7 +122,7 @@ http://phpjs.org/functions/base64_decode/
 
 <body>
 
-<div id="editor"></div>
+<div id="editor" style="height: 100%;"></div>
 
 <form action="#" method="post">
 	<input type="hidden" name="data" />
@@ -127,8 +132,8 @@ http://phpjs.org/functions/base64_decode/
 
 <script type="text/javascript">
 	var sketchpad = Raphael.sketchpad("editor", {
-		width: 600,
-		height: 600,
+		width: "100%",
+		height: "100%",
 		editing: true
 	});
 
@@ -140,7 +145,6 @@ http://phpjs.org/functions/base64_decode/
 </script>
 
 
-<div id="editor"></div>
 
 <div id="dialog" title="Share drawing">
     <p>To share your drawing, simply send the url below to a friend.</p>
